--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -21,14 +21,22 @@
     "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/mapped-types": "^2.1.0",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.0.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/passport-jwt": "^4.0.1",
+    "@types/passport-local": "^1.0.38",
     "@types/pg": "^8.15.4",
+    "bcryptjs": "^3.0.2",
     "cache-manager": "^7.0.1",
     "cache-manager-redis-store": "^3.0.1",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "pg": "^8.16.3",
     "redis": "^4.7.1",
     "reflect-metadata": "^0.1.13",
