--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -34,6 +34,8 @@
     "bcryptjs": "^3.0.2",
     "cache-manager": "^7.0.1",
     "cache-manager-redis-store": "^3.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
