--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,4 @@
-Run actions/setup-node@v4
-Found in cache @ /opt/hostedtoolcache/node/20.19.4/x64
-Environment details
-/opt/hostedtoolcache/node/20.19.4/x64/bin/npm config get cache
-/home/runner/.npm
-Error: Some specified paths were not resolved, unable to cache dependencies.name: Deploy Frontend to GitHub Pages
+name: Deploy Frontend to GitHub Pages
 
 on:
   push:
