fix: use PRODUCTION_DOMAIN env variable for CORS production domain\n\n- Improves flexibility and security for deployment\n- Documented in .env.example for Railway and other platforms

--- a/packages/backend/.env.example
+++ b/packages/backend/.env.example
@@ -16,3 +16,6 @@ ADMIN_PASSWORD=your-secure-password-here
 # Application Configuration
 NODE_ENV=production
 PORT=3001
+
+# Production Domain for CORS
+PRODUCTION_DOMAIN=https://hsr-team-builder.gilded.dev
